kubernetes/paperless/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
  labels:
    goldilocks.fairwinds.com/enabled: "true"
